// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`masked-input [snapshot] > renders correctly 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-default"
>
  <div
    class="vesper-text-input-field-wrapper"
  >
    <input
      class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
      id="_r_1j_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`masked-input [snapshot] > renders correctly with a mask 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-default"
>
  <div
    class="vesper-text-input-label-wrapper"
  >
    <label
      class="vesper-typography vesper-typography-label-sm vesper-text-input-label"
      for="_r_1l_"
    >
      Activation code
    </label>
    <div
      class="vesper-text-input-field-wrapper"
    >
      <input
        class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
        id="_r_1l_"
        placeholder=" "
        type="text"
      />
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;
